<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_enable_pin"
        android:title="@string/lock_enable_entry"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_pin"
        android:title="@string/lock_change_entry"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_disable_pin"
        android:title="@string/lock_disable_entry"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import_export"
        android:title="@string/action_import_export"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
